[tool.poetry]
name = "holiday-integrations"
version = "0.1.0"
description = "A starter template for creating holiday integration examples"
authors = ["Fetch.AI Limited"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-search-results = "^2.4.2"
langchain = "^0.0.149"
openai = "^0.27.4"
uagents = "*"
bs4 = "^0.0.1"
clipboard = "^0.0.4"
plyer = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
