[tool.poetry]
name = "uAgent-TempAlert"
version = "0.1.0"
description = "uAgent-TempAlert: Your personal Temperature Alert Agent. Monitor weather conditions, set thresholds, and receive real-time alerts for temperature extremes."
authors = ["Shubhom Srivastava","Shivom Srivastava","Vaibhav Patel","Shrey Khare"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"
bs4 = "^0.0.1"
clipboard = "^0.0.4"
plyer = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
